<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet_listCity"
    android:background="@color/black_bg"
    tools:context="com.example.fragment.listTimeZoneFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_city"
            android:fontFamily="@font/roboto_light"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="7dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@color/gray_search"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_search_24"
                        android:paddingHorizontal="10dp"
                        app:tint="@color/gray_text"/>
                    <EditText
                        android:id="@+id/edt_timeZone_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:hint="@string/search"
                        android:textColor="@color/white"
                        android:fontFamily="@font/roboto_light"
                        android:textStyle="bold"
                        android:textColorHint="@color/gray_text"
                        android:backgroundTint="@android:color/transparent"/>
                </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_timeZone_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:fontFamily="@font/roboto_light"
                    android:textStyle="bold"
                    android:textColor="@color/yellow_text"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_timeZone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="14dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="40dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="B"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="D"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="G"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="K"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="L"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="O"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="P"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Q"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="S"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="T"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="U"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="V"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="W"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="X"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Y"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Z"
                    android:textColor="@color/yellow_text"
                    android:layout_gravity="end"/>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>